Sun, 30 Jul 2006 15:44:38 +0200 <thp@perli.net>
	* Did some housekeeping (changelog format, e-mail address fix)
        * bin/gpodder: Python version needed is 2.4, because of D-Bus
	* Makefile: Merged changes from trunk ("make cl" target)

Sun, 30 Jul 2006 13:35:17 +0200 <informancer@web.de>
	* src/gpodder/test_gpodder_backend.py: Added unittest for stating
	  and stopping gPodderLib as DBus service.
	* Modified gpodderlib.py to have a DBus service.

Tue, 18 Jul 2006 21:59:32 +0200 <informancer@web.de>
	* Moved deleteFilename() and CreateIfNecessary() to utils.py
	* Moved isDebugging() to constants.py

Mon, 17 Jul 2006 17:02:15 +0200 <thp@perli.net>
	* Set update_on_startup in gPodderLib so gPodder doesn't 
	  crash for first-time users with no gPodder configuration
	* Updated German translation file + messages.pot
	* Version set to 0.7.9 - this is a testing version before 
	  the 0.8.0 release
	* References to 0.8 have been changed to 0.8.0 - gpodder 
	  will have a 3-digit version number beginning from now 
	  so we can put out smaller bugfix releases (0.8.1, etc..) 
	  between the bigger releases if needed
	* Debugging output disabled for this testing release. if 
	  you want to enable it, set the "debugging" variable to 
	  True in src/gpodder/libgpodder.py
	* Preparations for the 0.8.0 release (TODO list, etc..)

Fri, 14 Jul 2006 21:07:56 +0200 <thp@perli.net>
	* Multiple selection support for downladed items list
	* Bumped up version and release dates
	* Updated parts of README file for upcoming 0.8 release
	* Updated TODO list
	* Do nothing if zero elements are selected for the new 
	  multiple selection items (previously showed bogus 
	  confirmation message to user - not good! ;)
	* Re-designed "Updating feed cache" dialog, simplified 
	  it and added a progress bar to it
	* gPodderChannelReader now accepts an optional callback
	  parameter for download status indication (see above)
	* Fixed multiple selection for downloaded item info box