@@ -1,0 +1,41 @@
+#!/usr/bin/env python2.4
+# -*- coding: utf-8 -*-
+
+#
+# gPodder (a media aggregator / podcast client)
+# Copyright (C) 2005-2006 Thomas Perl <thp at perli.net>
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, 
+# MA  02110-1301, USA.
+#
+
+import dbus
+import dbus.service
+import gobject
+if getattr(dbus, 'version', (0,0,0)) >= (0,41,0):
+    import dbus.glib
+
+import sys
+from gpodder.libgpodder import gPodderLibClass
+
+
+def main():
+    bus = dbus.SessionBus()
+    bus_name = dbus.service.BusName('net.perli.gpodder.GPodderApp', bus=bus)
+    gpodderlib = gPodderLibClass(bus_name)
+    gpodderlib.run()
+
+if __name__=='__main__':
+    main()
