@@ -1,3 +1,7 @@
+Thu, 03 Aug 2006 20:03:23 +0200 <informancer@web.de>
+	* Makefile: Added unittest target
+	* Fixed path bug when starting backend
+
 Sun, 30 Jul 2006 15:44:38 +0200 <thp@perli.net>
 	* Did some housekeeping (changelog format, e-mail address fix)
         * bin/gpodder: Python version needed is 2.4, because of D-Bus
